--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,19 @@
     color:darkblue;
   }
 }
-@media screen and (max-width:420px) {
+@media screen and (min-width:920px) {
   body {
     background-color: teal;
   }
+
+  }
 }
 
-@media screen and (min-width: 1100px) {
-    body {
-      background-color: green;
-    }
+@media screen and (min-width: 1000px) {
+  .column {
+    width: 300px;
+    float: left;
+    padding: 20px;
+    background-color: lightblue;
+  }
 }
