--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,20 @@
-@media screen and (max-width: 900px) and (min-width: 710px) {
+@media screen and (min-width:1000px) {
+  .column {
+    background-color: lightblue;
+    width: 300px;
+    float: left;
+    padding: 20px;
+  }
+}
+@media screen and (max-width:900px) and (min-width:710px) {
   body {
     background-color: magenta;
     color:darkblue;
   }
 }
-@media screen and (min-width:920px) {
+@media screen and (min-width:920px) and (max-width:990px){
   body {
     background-color: teal;
   }
-
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .column {
-    width: 300px;
-    float: left;
-    padding: 20px;
-    background-color: lightblue;
   }
 }
